chore(auth): configura infraestrutura do Firebase Auth para Google e Facebook

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">AutoCusto</string>
+    <string name="facebook_app_id">2510238726024712</string>
 </resources>
